--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
       {{ content }}
 
       </section>
+      <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="hmoats"><a class="LI-simple-link" href='https://www.linkedin.com/in/hmoats?trk=profile-badge'>Henry Moats</a></div>
     </div>
     <footer>
     {% if site.github.is_project_page %}
